--- a/src/output.css
+++ b/src/output.css
@@ -581,6 +581,9 @@
   .flex {
     display: flex;
   }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
