--- a/src/output.css
+++ b/src/output.css
@@ -641,6 +641,9 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-100 {
+    height: calc(var(--spacing) * 100);
+  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
@@ -679,9 +682,6 @@
   }
   .h-96 {
     height: calc(var(--spacing) * 96);
-  }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
   }
   .h-146 {
     height: calc(var(--spacing) * 146);
@@ -882,14 +882,8 @@
   .border-white\/20 {
     border-color: color-mix(in oklab, var(--color-white) 20%, transparent);
   }
-  .bg-\[\#001f6c\] {
-    background-color: #001f6c;
-  }
   .bg-\[\#1e015c\] {
     background-color: #1e015c;
-  }
-  .bg-\[\#002F6C\] {
-    background-color: #002F6C;
   }
   .bg-\[\#011f5c\] {
     background-color: #011f5c;
@@ -902,6 +896,12 @@
   }
   .bg-\[\#00196c\] {
     background-color: #00196c;
+  }
+  .bg-\[\#001f6c\] {
+    background-color: #001f6c;
+  }
+  .bg-\[\#002F6C\] {
+    background-color: #002F6C;
   }
   .bg-\[\#01285c\] {
     background-color: #01285c;
@@ -1044,6 +1044,10 @@
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
   .text-base {
     font-size: var(--text-base);
     line-height: var(--tw-leading, var(--text-base--line-height));
@@ -1084,14 +1088,29 @@
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
   }
+  .text-black {
+    color: var(--color-black);
+  }
   .text-blue-500 {
     color: var(--color-blue-500);
+  }
+  .text-blue-950 {
+    color: var(--color-blue-950);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
   }
   .text-gray-800 {
     color: var(--color-gray-800);
+  }
+  .text-red-300 {
+    color: var(--color-red-300);
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
+  .text-red-800 {
+    color: var(--color-red-800);
   }
   .text-white {
     color: var(--color-white);
